[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repr-cli"
version = "0.1.0"
description = "A beautiful, privacy-first CLI that analyzes your code repositories and generates a compelling developer profile"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Repr", email = "hello@repr.dev"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["cli", "developer", "profile", "git", "analysis", "repr"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "pygments>=2.16.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
repr = "repr.cli:app"

[project.urls]
Homepage = "https://repr.dev"
Documentation = "https://repr.dev/docs"
Repository = "https://github.com/repr-app/cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["repr*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
